# enrich_exchange

./: .gitignore  Dockerfile  alembic.ini  docker-compose.yml  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 21f3ac3c4032_shares_table.py  2642575edc89_shares.py  2fde512d63bd_add_consumer.py  3bedc782f041_shares.py  41274de60c46_shares.py  aef2e3784b14_init_exchange_table.py  ce67fe216100_create_exchange_table.py  ce67fe216100_refactor_exchange_table.py  f2b72ea28865_shares_table_kafka_consumer.py  fbd4b5f7d90c_add_kafka_consumer_and_shares.py
src/: app.py  base_service.py  db.py  exceptions.py  main.py  schemas.py  settings.py
src/binance/: binance_price_service.py  utils.py
src/config/: settings.py
src/exchange/: dependencies.py  enrich_exchange_routers.py  exception_handler.py  exceptions.py  exchange_entities.py  interface.py  models.py  portfolio_interface.py  redis_client.py  repository.py  routers.py  schemas.py  use_cases.py
src/exchanges/: dependencies.py  exception_handler.py  exceptions.py  interface.py  models.py  repository.py  routers.py  use_cases.py
src/first_service/: exchange_api_service.py
src/infrastructure/: config.py  enrich_consumer_handler.py  kafka_consumer.py  kafka_consumer_handler.py  redis_client.py
src/kafka_client/: kafka_consumer.py
src/redis_client/: redis_client.py
src/routers/: create_exchange_router.py  delete_exchange_router.py  dependencies.py  get_exchange_router.py  update_exchange_router.py
src/shares/: interface.py  models.py  repository.py  routers.py  use_cases.py  (+1 more)
(+9 files in other folders)
