[project]
name = "pet2crypto"
version = "0.1.0"
description = ""
authors = [
    {name = "xxxx456",email = "x@email.com"}
]
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.135.1,<0.136.0)",
    "uvicorn (>=0.42.0,<0.43.0)",
    "sqlalchemy (>=2.0.48,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "redis (>=7.3.0,<8.0.0)",
    "ujson (>=5.12.0,<6.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "tenacity (>=9.1.4,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
